# yubico-c-client

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  BLURB  CMakeLists.txt  Makefile.am  NEWS  README  build-and-test.sh  cdecode.c  cdecode.h  cencode.c  cencode.h  configure.ac  libykclient.c  libykclient.h  libykclient.map  selftest.c  simple.mk  tool.c  windows.mk  ykclient.c  ykclient.h  ykclient_errors.h  ykclient_server_response.c  ykclient_server_response.h  ykclient_version.c  ykclient_version.h.in
.github/workflows/: linux_build.yml  scan.yml
b64/: cdecode.c  cencode.c
cmake/: ykclientConfig.cmake.in
m4/: .placeholder
tests/: Makefile.am  selftest.c
trunk/: Makefile.am  README  configure.ac  libykclient.c  libykclient.h  selftest.c  simple.mk
